--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4"
-serde = "1"
+actix-web = { version = "4", features = ["openssl"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0.147"
 serde_qs = "0.10.1"
+serde_json = "1.0.89"
+env_logger = "0.9.3"
+openssl = "0.10"
+dotenvy = "0.15"
+diesel = { version = "2.0.0", features = ["postgres"] }
+chrono = { version = "0.4.19", default-features = false, features = ["clock", "std", "serde"] }
